--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -8,8 +8,15 @@
   margin: 20px;
 }
 
-.loginLink {
+.sessionLinks {
   border: 1px solid black;
-  width: fit-content;
   padding: 10px;
+  width: 100px;
+  text-align: center;
+}
+.loginLink {
+  composes: sessionLinks;
+}
+.signUpLink {
+  composes: sessionLinks;
 }
