--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -2,21 +2,99 @@
   display: grid;
 }
 
-.websiteTitle {
-  font-size: 3em;
-  text-align: center;
+$green: #2ecc71;
+$red: #ff1900;
+$blue: #3498db;
+$yellow: #f1c40f;
+$purple: #8e44ad;
+$turquoise: #1abc9c;
+
+// Basic Button Style
+.btn {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid $red;
+  border-radius: 0.6em;
+  color: $red;
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
   margin: 20px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+
+  &:hover,
+  &:focus {
+    color: #fff;
+    outline: 0;
+  }
 }
 
 .sessionLinks {
-  border: 1px solid black;
-  padding: 10px;
-  width: 100px;
-  text-align: center;
+  composes: btn;
+  border-color: $red;
+  // border: 0;
+  border-radius: 0;
+  color: $red;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  transition: color 150ms ease-in-out;
+
+  &:after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 100%;
+    background: $red;
+    z-index: -1;
+    transition: width 150ms ease-in-out;
+  }
+
+  &:hover {
+    color: #fff;
+    &:after {
+      width: 110%;
+    }
+  }
 }
+
 .loginLink {
   composes: sessionLinks;
 }
 .signUpLink {
   composes: sessionLinks;
+}
+
+.navLinks {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.dancers {
+  background-image: url(./dancers.jpg);
+  background-size: cover;
+  height: 66.6vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.websiteTitle {
+  font-size: 5em;
+  margin: 20px;
+  font-family: "Merienda One", cursive;
+  color: white;
 }
